--- a/LocalizationResources/Properties/Resources.de.resx
+++ b/LocalizationResources/Properties/Resources.de.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MainHello" xml:space="preserve">
-    <value>This is an english test</value>
+  <data name="LocalHello" xml:space="preserve">
+    <value>நாங்க கூட லோக்கல் தான் பா</value>
   </data>
 </root>
